[tool.poetry]
name = "repl_python3_SnowballFight"
version = "0.1.0"
description = ""
authors = ["EdBarrancos <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-decouple = "^3.5"
discord = "^1.7.3"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
